<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/corpo_noticia"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_texto"
    android:orientation="vertical"
    android:padding="10dp" 
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/imagem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:contentDescription="@string/noticia_imagem"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titulo"
        		android:text="@string/noticia_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/texto"
        android:text="@string/noticia_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>